[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = {version = "1.23.2", features = ["derive"]}
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token-2022 = "0.1.0"
thiserror-no-std = "2.0.2"

[dev-dependencies]
mollusk-svm = "0.6.0"
solana-sdk = "3.0.0"
spl-token = "8.0.0"
