[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = {vesion = "1.5.7", default-features = false, features = ["derive"], git= "https://github.com/near/borsh-rs"}
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
thiserror-no-std = "2.0.2"

[dev-dependencies]
mollusk-svm = "0.6.0"
